# cocktail

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/client/: .env.example  components.json  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/client/src/: App.tsx  main.tsx  router.tsx  styles.css
apps/client/src/components/: AppShell.tsx  AppSidebar.tsx  ChatView.tsx  ComposerInput.tsx  GalleryDetailPanel.tsx  GalleryView.tsx  HealthBanner.tsx  HistoryView.tsx  MessageList.tsx  MessagePart.tsx
apps/client/src/components/image-viewer/: ImageViewer.tsx
apps/client/src/components/ui/: button.tsx  input.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  tooltip.tsx
apps/client/src/hooks/: use-auto-scroll-to-bottom.ts
apps/client/src/lib/: api.ts  sse.ts
apps/client/src/store/: chat.ts
apps/server/: pyproject.toml
apps/server/src/cocktail_server/: config.py  main.py
apps/server/src/cocktail_server/api/: chat.py  conversations.py  generate.py  health.py  images.py
apps/server/src/cocktail_server/schemas/: chat.py  conversations.py  events.py  generate.py  health.py  images.py  messages.py
apps/server/src/cocktail_server/scripts/: export_openapi.py  fetch_models.py  warmup.py
apps/server/src/cocktail_server/services/: conversation_store.py  image_gen.py  llm.py  model_manager.py  orchestrator.py  prompt_builder.py  seed_resolver.py  turn_registry.py
apps/server/tests/: conftest.py  test_chat_api.py  test_conversation_store.py  test_conversations_api.py  test_fetch_models.py  test_generate_api.py  test_images_api.py  test_images_upload.py  test_llm_build_messages.py  test_model_manager.py  test_prompt_builder.py  test_seed_resolver.py
docker/: entrypoint.sh
