[project]
name = "cocktail"
version = "0.0.0"
description = "日本語指示から Anima で高品質イラストを生成するマルチターンチャット"
requires-python = ">=3.12"
dependencies = ["cocktail-server"]

[tool.uv.workspace]
members = ["apps/server"]

[tool.uv.sources]
cocktail-server = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF", "ASYNC"]
ignore = [
    "E501",
    # 日本語コメントに全角括弧・記号を使うため RUF001-RUF003 を無効化
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
mypy_path = "apps/server/src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "bitsandbytes.*",
    "diffusers_anima.*",
    "diffusers.*",
    "transformers.*",
    "accelerate.*",
]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/server/tests"]
